# spaghettiCode

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSpaghettiCodeRules.cmake
include/: spaghettiCode.h
include/utils/: sml2plantuml.h
src/: CMakeLists.txt  spaghettiCode.cpp
templates/: version.h.in
test/: CMakeLists.txt  logic.h  main.cpp
